--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegistroActivity" />
-        <activity android:name=".OficiosActivity"></activity>
+        <activity android:name=".OficiosActivity" />
+        <activity android:name=".Menu1Activity"></activity>
     </application>
 
 </manifest>
