--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".RegistroActivity" />
         <activity android:name=".OficiosActivity" />
-        <activity android:name=".Menu1Activity"></activity>
+        <activity android:name=".Menu1Activity" />
+        <activity android:name=".TrabajosActivity"></activity>
     </application>
 
 </manifest>
