--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".RegistroActivity" />
         <activity android:name=".OficiosActivity" />
         <activity android:name=".Menu1Activity" />
-        <activity android:name=".TrabajosActivity"></activity>
+        <activity android:name=".TrabajosActivity" />
+        <activity android:name=".TrabajadoresActivity"></activity>
     </application>
 
 </manifest>
