--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".Actividades.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegistroActivity" />
-        <activity android:name=".OficiosActivity" />
-        <activity android:name=".Menu1Activity" />
-        <activity android:name=".TrabajosActivity" />
-        <activity android:name=".TrabajadoresActivity"></activity>
+        <activity android:name=".Actividades.RegistroActivity" />
+        <activity android:name=".Actividades.OficiosActivity" />
+        <activity android:name=".Actividades.Menu1Activity" />
+        <activity android:name=".Actividades.TrabajosActivity" />
+        <activity android:name=".Actividades.TrabajadoresActivity"></activity>
     </application>
 
 </manifest>
