--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.eliascapasso.alljobs">
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-feature   android:name="android.hardware.camera"
+        android:required="true"/>
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -44,8 +49,9 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".Actividades.MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:name=".Fragmentos.MapFragment"
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".Actividades.MapActivity"></activity>
     </application>
 
 </manifest>
